testing category on beta

--- a/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo_mobile/default/template/layerednav/layer.phtml
@@ -1,6 +1,6 @@
 <?php $style_array = array('largevshape', 'round', 'vshape') ?>
 <?php $gender_array = array('men', 'children', 'women'); ?>
-<?php
+<?php $customId = '231';
 /*
  * Adding javascript include
  */
@@ -200,7 +200,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {
                                             $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories=255&custom=1') ==  false) {
+											if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
                                         ?>
 								
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
@@ -268,7 +268,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {										
 									        $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories=255&custom=1') ==  false) {
+											if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
                                         ?>
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
                                         <div class="cate-open-close" style="display:<?php echo $custom ?>">
