--- a/app/design/frontend/creo_mobile/default/template/attributeswatches/catalog_product_view_media.phtml
+++ b/app/design/frontend/creo_mobile/default/template/attributeswatches/catalog_product_view_media.phtml
@@ -179,7 +179,12 @@ if (!Mage::getStoreConfig('attributeswatches/cloudzoom/enabled') && !Mage::getSt
             <ul class="<?php echo $_list_class; ?>">
                 <?php foreach ($this->getGalleryImages() as $_image): ?>
                     <li  class="<?php echo $_image->getAssociatedAttributes(); ?> product-image-thumbs" <?php if ($_image->getDisabled()): ?>style="display:none;"<?php endif; ?>>
-                        <a class="fancybox-gallery" href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $_large_image_height); ?>" rel="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_zoom_image_width, $_zoom_image_height); ?>" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $large_image_height); ?>" width="<?php echo $_large_image_width; ?>" height="<?php echo $large_image_height; ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
+                        <a class="fancybox-gallery" href="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $_large_image_height); ?>" rel="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_zoom_image_width, $_zoom_image_height); ?>" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>">
+                        <img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()); ?>" width="<?php echo $_large_image_width; ?>" height="<?php echo $large_image_height; ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" />
+                        <?php  /* ?>
+                        <img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize($_large_image_width, $large_image_height); ?>" width="<?php echo $_large_image_width; ?>" height="<?php echo $large_image_height; ?>" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" />
+                        <?php */ ?>
+                        </a>
                     </li>
                 <?php endforeach; ?>
             </ul>
