css fixes and slider fixes

--- a/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/product/view.phtml
@@ -38,7 +38,7 @@
 <div class="row">
 <?php
 if($_product->stock_item->is_in_stock == 0){
-	$outofstockclass = "outofstockclass ";
+    $outofstockclass = "outofstockclass ";
  } ?>
 
 <div class="<?php if(isset($outofstockclass)) {echo $outofstockclass ;} ?>product-detail col col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -78,18 +78,18 @@ if($_product->stock_item->is_in_stock == 0){
                                 </div>
                             </div>
                         </div>
-                    </div> 
+                    </div>
                     <div class="text-area col-lg-6 col-xs-12">
                         <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
-                        <div class="price-area"> 
+                        <div class="price-area">
                             <span class="price">
                                 <?php if($_product->getSpecialPrice() > 0.0):?>
-                                    <i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i> 
+                                    <i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i>
                                 <?php endif;?>
                                 <?php echo $_formattedSpecialPrice = Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?></span>
-                            <span class="availability">Availability:  
+                            <span class="availability">Availability:
                                 <?php echo $this->getChildHtml('product_type_availability'); ?>
-                            </span> 
+                            </span>
                         </div>
                         <div class="options-area">
                             <?php if ($_product->isSaleable()): ?>
@@ -104,16 +104,16 @@ if($_product->stock_item->is_in_stock == 0){
                 </div>
             <?php }else { ?>
             <h2><?php echo $_helper->productAttribute($_product, $_product->getName(), 'name') ?></h2>
-                <div class="carousel-creo carousel3">
+                <div class="">
                     <div class="product-img-box">
                         <?php echo $this->getChildHtml('media') ?>
                     </div>
                 </div>
                 <div class="text-area">
-                    <div class="price-area"> 
+                    <div class="price-area">
 <div class="price-info">
 <?php /*?><?php if($_product->getSpecialPrice() > 0.0):?>
-<i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i> 
+<i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i>
 <?php endif;?>
 <?php echo $_formattedSpecialPrice = Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?><?php */?>
 
@@ -124,7 +124,7 @@ if($_product->stock_item->is_in_stock == 0){
  </div>
                         <span class="availability">Availability:
                             <?php echo $this->getChildHtml('product_type_availability'); ?>
-                        </span> 
+                        </span>
                     </div>
 
 <div class="options-area">
@@ -160,26 +160,26 @@ if($_product->stock_item->is_in_stock == 0){
                             } else {
                                 echo " ";
                             }
-                            ?> 
+                            ?>
                         </div>
                         <div id="tab3" style="display: none; width: 715px;" class="js-tab-hidden">
                             <p><?php print $_product->getDesign(); ?> </p>
                         </div>
                     </div>
-                    
+
                     <?php  if(!$_product->isSaleable()): ?>
-						<?php echo $this->getChildHtml('addto') ?>                      
+        <?php echo $this->getChildHtml('addto') ?>
                       <?php endif; ?>
 
 
                     <?php // jawwad.nissar work starts  ?>
-                    <div class="shipping-area"> 
+                    <div class="shipping-area">
                         <h4 st> Shipping Information  </h4>
                         <!--<a class="shipping-info" href="#">Shipping Information</a>-->
                         <p><?php print $_product->getShippingDetails(); ?> </p>
-                    </div> 
-                    <?php // jawwad.nissar work ends  ?>                     
-                    <!--                    <div class="shipping-area"> 
+                    </div>
+                    <?php // jawwad.nissar work ends  ?>
+                    <!--                    <div class="shipping-area">
                     <?php
 //                        $methods = Mage::getSingleton('shipping/config')->getActiveCarriers();
 //                        $options = array();
@@ -267,8 +267,8 @@ if($_product->stock_item->is_in_stock == 0){
                                 jQuery('.fme_loading_filters').hide();
                                         //alert(data.status + ": " + data.message);
                                        if (jQuery('#header-cart')) {
-			if(data.status != "ERROR"){
-			jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
+            if(data.status != "ERROR"){
+            jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
                                 }
                                 /*initialize the minicart dropdown again*/
                                 jQuery('#open-close-minicart').openClose({
@@ -279,40 +279,40 @@ if($_product->stock_item->is_in_stock == 0){
                                         event: 'over',
                                         effect: 'fade'
                                 });
-		jQuery('#ajaxModalTitle').html(data.status);
-		jQuery('#ajaxModalContent').html(data.message);
-		jQuery('.ajaxAddToCartModal').modal('show');
+        jQuery('#ajaxModalTitle').html(data.status);
+        jQuery('#ajaxModalContent').html(data.message);
+        jQuery('.ajaxAddToCartModal').modal('show');
 
         //refresh minicart
-		var data = jQuery('#product_addtocart_form').serialize();
-		data += '&isRefresh=1';
-		try {
-		jQuery.ajax({
-		url: url,
-				dataType: 'json',
-				type : 'post',
-				data: data,
-				success: function(data){
-		if(data.status != "ERROR"){
-		jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
-		}
-				if (jQuery('#header-cart')) {
-				/*initialize the minicart dropdown again*/
-				jQuery('#open-close-minicart').openClose({
-				activeClass: 'active',
-						opener: '.opener',
-						slider: '.slide',
-						animSpeed: 400,
-						event: 'over',
-						effect: 'fade'
-				});
-						}
-				}
-		});
-		} catch (e) {
+        var data = jQuery('#product_addtocart_form').serialize();
+        data += '&isRefresh=1';
+        try {
+        jQuery.ajax({
+        url: url,
+                dataType: 'json',
+                type : 'post',
+                data: data,
+                success: function(data){
+        if(data.status != "ERROR"){
+        jQuery('#open-close-minicart').html('<a href="javascript:void(0)" class="opener"><span class="count">' + data.qty + '</span>My Cart</a>' + data.minicart);
+        }
+                if (jQuery('#header-cart')) {
+                /*initialize the minicart dropdown again*/
+                jQuery('#open-close-minicart').openClose({
+                activeClass: 'active',
+                        opener: '.opener',
+                        slider: '.slide',
+                        animSpeed: 400,
+                        event: 'over',
+                        effect: 'fade'
+                });
+                        }
+                }
+        });
+        } catch (e) {
 }
-		//refresh minicart
-		}
+        //refresh minicart
+        }
 }
                         });
                         } catch (e) {
@@ -414,7 +414,7 @@ if($_product->stock_item->is_in_stock == 0){
                 </div>
             </div>
         </div>
-    </div>   
+    </div>
     <div class="fme_loading_filters" style="display:none;"><img id="loading-image" src="<?php echo $this->getSkinUrl('images/FME/ajax-loader.gif'); ?>" /></div>
     <style>
         .fme_loading_filters {
@@ -435,10 +435,10 @@ if($_product->stock_item->is_in_stock == 0){
             z-index: 900;
         }
     </style>
-    
-    
-    
-<script type="application/javascript">    
+
+
+
+<script type="application/javascript">
     //Get associated product price
 <?php if($_product->isConfigurable()):?>
 function isValidPrice(price)
@@ -512,8 +512,9 @@ jQuery(document).ready(function(){
     jQuery("[name*='super_attribute'], [name*='options']").on('change', function(){
         loadPriceWithAjax();
     });
-    
+
     //if any of the default attribute or option is selected do send the ajax request
+
     if(hasDefaultSelection()) {
         loadPriceWithAjax();
     }
