--- a/skin/frontend/creo_mobile/default/attributeswatches/attributeswatches.css
+++ b/skin/frontend/creo_mobile/default/attributeswatches/attributeswatches.css
@@ -341,31 +341,20 @@ a.product-image:hover img.catalog-hover-image {
 /* previous - next buttons on main image container */
 
 #product-image-gallery-prev,
-#product-image-gallery-next{
-    position: absolute;
-    top: 50%;
-    margin-top: -20px;
-    outline: 0;
-    width: 32px;
-    height: 40px;
-    text-indent: -9999px;
-    z-index: 999;
-    display:block;
-    background-repeat: no-repeat;
-    background-position:center;
-    cursor: pointer;
+#product-image-gallery-next{position: absolute;top: 50%;margin-top: -20px;outline: 0;width: 32px;height: 40px;text-indent: -9999px;
+z-index: 999;display:block;background-repeat: no-repeat;background-position:center;cursor: pointer;
 }
 
-#product-image-gallery-prev{
-    background-image: url(img/chevron-left.png);
+#product-image-gallery-prev,.bx-wrapper .bx-prev{
+    background: url(img/chevron-left.png);
     left:0px;
 }
 
-#product-image-gallery-next{
-    background-image: url(img/chevron-right.png);
+#product-image-gallery-next,.bx-wrapper .bx-next{
+    background: url(img/chevron-right.png);
     right:0px;
 }
-
+.bx-wrapper .bx-controls-direction a{margin-top:-15px;width:15px;height:22px;}
 #product-gallery-container.more-views-container ul li.hidden-gallery-item{
     display:none !important;
 }
