--- a/skin/frontend/creo_mobile/default/css/styles.css
+++ b/skin/frontend/creo_mobile/default/css/styles.css
@@ -191,22 +191,13 @@
 
 .product-view .product-shop,
 .product-view .add-to-cart-wrapper,
-.product-view .block-related {
-  padding-left: 15px;
-}
-
-.product-img-box {
-  padding-right: 15px;
-}
-
+.product-view .block-related {padding-left: 15px;}
+.product-img-box {/*padding-right: 15px;*/}
 .product-view .product-shop,
 .product-img-box,
 .product-collateral,
 .product-view .block-related,
-.box-collateral {
-  margin-bottom: 10px;
-}
-
+.box-collateral {margin-bottom: 10px;}
 .product-view {
   /* Set a min-height so that the floated elements break appropriately */
 }
@@ -350,4 +341,5 @@
   padding: 0;
 }
 /*Messages are shifted to popups using these hidden fields, so do not remove*/
-.input-box .validation-advice {visibility:hidden;}/*Disabled visibility because, the messages are now shown in popups*/
+.input-box .validation-advice {visibility:hidden;}
+/*Disabled visibility because, the messages are now shown in popups*/
