--- a/app/design/frontend/creo_mobile/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/creo_mobile/default/template/checkout/cart/item/default.phtml
@@ -30,7 +30,7 @@ $isVisibleProduct = $_item->getProduct()->isVisibleInSiteVisibility();
 $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage_Catalog_Model_Product_Attribute_Source_Msrp_Type::TYPE_BEFORE_ORDER_CONFIRM);
 ?>
 <tr>
-    <td bgcolor="#000000" class="product-cart-image">
+    <td class="product-cart-image">
     <div class="text-area">
         <?php if ($this->hasProductUrl()):?>
             <a href="<?php echo $this->getProductUrl() ?>" title="<?php echo $this->escapeHtml($this->getProductName()) ?>" class="product-image alignleft">
@@ -49,9 +49,6 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
                 </li>
             <?php endif ?>
         </ul><?php */?>
-        
-        
-        
 		
         <h3 class="product-name">
         <?php if ($this->hasProductUrl()):?>
