creo menu background

--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5259,7 +5259,7 @@ dl {margin: 0 0 10px;}
 	top: 6px;
 	width: 56%;
 }
-#nav ol > li:last-child {
+#nav ol > li:last-child,#nav ol > li:nth-child(5){
 	background: #ef4f61;
 	transform: skewX(-30deg);
 	-moz-transform: skewX(-30deg);
@@ -5267,7 +5267,8 @@ dl {margin: 0 0 10px;}
 	-ms-transform: skewX(-30deg);
 	-webkit-transform: skewX(-30deg);
 }
-#nav ol > li:last-child a{
+#nav ol > li:nth-child(5){background-color: #000;}
+#nav ol > li:last-child a,#nav ol > li:nth-child(5) a{
 	color: #fff;
 	transform: skewX(30deg);
 	-moz-transform: skewX(30deg);
@@ -5275,7 +5276,7 @@ dl {margin: 0 0 10px;}
 	-ms-transform: skewX(30deg);
 	-webkit-transform: skewX(30deg);
 }
-#nav ol > li:last-child a:before{
+#nav ol > li:last-child a:before,#nav ol > li:nth-child(5) a:before{
 	background: #fff;
 	bottom: 0;
 	content: "";
