--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -172,8 +172,10 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                         <?php $_filters = $this->getFilters();
 						if($_REQUEST['custom']){
 							$custom = 'none';
+							$block = '';
 						}else{
 							$custom = '';
+							$block = 'none';
 						}
                         ?>
                         <?php // $_filters = array_reverse($_filters); ?>
