--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -200,9 +200,8 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
                                     <?php } else if ($_filter->getVar() == 'universal_categories') {
                                             $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
+			if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
                                         ?>
-								
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
                                         <div class="cate-open-close" style="display:<?php echo $custom ?>">
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
@@ -212,24 +211,23 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                                 <?php echo $_filter->getHtml() ?>
 
                                             </ul></div>
-                                    <?php
-											}elseif(strpos($currentUrl,'custom=1') ==  true){
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
-?>
+            <?php
+			} else if(strpos($currentUrl,'custom=1') ==  true){
+			 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
+             ?>
 
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
                                         <div class="cate-open-close" style="display:<?php echo $custom ?>">
 
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
-                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+                                          <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
                                                 <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
                                                 <?php echo $_filter->getHtml() ?>
 
                                             </ul></div>
 
-<?php												
-											}
+<?php		}
                                     }
                                 } else if ($current_category_p_id != '57' || $current_category_p_id != '58') {
                                     if ($_filter->getVar() == 'gender') {
@@ -265,24 +263,23 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                             <a class="opener" href="javascript:void(0)">Material</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
                                             <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
-                                    <?php } else if ($_filter->getVar() == 'universal_categories') {										
-									        $currentUrl = Mage::helper('core/url')->getCurrentUrl();
-											if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
-                                        ?>
+                                    <?php } else if ($_filter->getVar() == 'universal_categories') {
+			$currentUrl = Mage::helper('core/url')->getCurrentUrl();
+            			if (strpos($currentUrl,'universal_categories="'.$customId.'"&custom=1') ==  false) {
+                                    ?>
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
                                         <div class="cate-open-close" style="display:<?php echo $custom ?>">
 
                                             <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
                                             <!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
-                                            <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+                                         <ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
                                                 <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
                                                 <?php echo $_filter->getHtml() ?>
-
                                             </ul></div>
                                     <?php
-											}elseif(strpos($currentUrl,'custom=1') ==  true){
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
-?>
+			}elseif(strpos($currentUrl,'custom=1') ==  true){
+			 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
+             ?>
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
                                         <div class="cate-open-close" style="display:<?php echo $custom ?>">
 
