showing block on crazy category

--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -205,7 +205,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 ?>
 										<div style="display:<?php echo $block?>">
                                         <?php
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('BlacknWhiteBanner')->toHtml();
+											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
                                         ?>
                                         </div>
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
@@ -258,7 +258,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 ?>
 										<div style="display:<?php echo $block?>">
                                         <?php
-											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('BlacknWhiteBanner')->toHtml();
+											 echo $this->getLayout()->createBlock('cms/block')->setBlockId('thecrazyones')->toHtml();
                                         ?>
                                         </div>
                                         <span style="display:<?php echo $custom ?>">Search By Design: </span>
