show colors section on wishlist page

--- a/app/design/frontend/creo/default/template/wishlist/options_list.phtml
+++ b/app/design/frontend/creo/default/template/wishlist/options_list.phtml
@@ -32,7 +32,7 @@
 <?php if ($options): ?>
 	<?php 
 		foreach ($options as $option){    
-			if($option['label'] == "Color")
+			if($option['label'] == "Tshirt Color")
 			{  
 				$color = $option['value'];		
 			}else  if($option['label'] == "Size"){ 
@@ -59,11 +59,11 @@ foreach ($productAttributeOptions as $productAttribute) {
     <h4>Color:</h4>
     <ul>
 <?php
-foreach( $attributeOptions['Color'] as $ao ){
+foreach( $attributeOptions['Tshirt Color'] as $ao ){
 	if(strtolower($ao) == strtolower($color) ){
-		$txt [] = '<li class="active '.strtolower($ao).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($ao).'.png" ></li>';
+		$txt [] = '<li class="active '.strtolower($ao).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/t-'.strtolower($ao).'.png" ></li>';
 		}else{
-	$txt [] = '<li class="'.str_replace(" ","_",strtolower($ao)).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($ao).'.png"></li>';
+	$txt [] = '<li class="'.str_replace(" ","_",strtolower($ao)).'"><img width="21" height="21" alt="'.$ao.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/t-'.strtolower($ao).'.png"></li>';
 		}
 		
 }
@@ -90,7 +90,7 @@ echo implode(' ',$txt2);
 <?php }
 else{
 	if($color){
-	echo '<div class="column color-area"> <h4>Color:</h4><ul><li class="active '.strtolower($color).'"><img width="21" height="21" alt="'.$color.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/'.strtolower($color).'.png" style="border:1px solid black; transform:skew(-15deg)"></li></ul></div>';
+	echo '<div class="column color-area"> <h4>Color:</h4><ul><li class="active '.strtolower($color).'"><img width="21" height="21" alt="'.$color.'" src="'.Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_MEDIA).'/catalog/swatches/1/21x21/media/t-'.strtolower($color).'.png" style="border:1px solid black; transform:skew(-15deg)"></li></ul></div>';
 	}
 	if($size){
 		echo '<div class="column size-area"> <h4>Size:</h4><ul><li class="active"><a href="#">'.$size.'</a></li></ul></div>';
