--- a/app/design/frontend/creo/default/template/customer/widget/name.phtml
+++ b/app/design/frontend/creo/default/template/customer/widget/name.phtml
@@ -67,8 +67,8 @@ For checkout/onepage/shipping.phtml:
         <div class="input-box">
             <input type="text" id="<?php echo $this->getFieldId('firstname')?>" name="<?php echo $this->getFieldName('firstname')?>" value="<?php echo $this->escapeHtml($this->getObject()->getFirstname()) ?>" title="<?php echo $this->getStoreLabel('firstname') ?>" maxlength="255" class="input-text <?php echo $this->helper('customer/address')->getAttributeValidationClass('firstname') ?>" <?php echo $this->getFieldParams() ?> />
         </div>
-    </div>
-<!--validation changes done. -->
+    </div>  
+<!--validation changes done...-->
 <?php if ($this->showMiddlename()): ?>
 <?php $isMiddlenameRequired = $this->isMiddlenameRequired();?>
     <div class="field name-middlename">
