--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer.phtml
@@ -357,7 +357,7 @@ endforeach;
 <!-- Menu active class added-->
 <li <?php if(strstr($ccurrentUrl,"collections")) {
                     echo'class="active"';
-                } ?>> <a href="<?php echo Mage::getBaseUrl() . "collections/index/categories" ?>">COLLECTIONS</a>
+                } ?>> <?php // echo Mage::getBaseUrl() . "collections/index/categories" ?> <a>COLLECTIONS</a>
     <div class="drop">
         <div class="links-area">
             <div class="links-frame">
