--- a/app/design/frontend/creo/default/template/email/order/items/order/default.phtml
+++ b/app/design/frontend/creo/default/template/email/order/items/order/default.phtml
@@ -84,7 +84,7 @@
 
                             <dt><strong><em><?php echo $option['label'] ?></em></strong></dt>
 
-                            <dd style="margin:0; padding:0 0 0 9px;">
+                            <dd style="margin:0;padding:0px;">
 
                                 <?php echo nl2br($option['value']) ?>
 
@@ -109,8 +109,7 @@
         	</div>
 
         </td>
-
-		<td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQtyOrdered()*1 ?></h2></td>
+        <td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_item->getQtyOrdered()*1 ?></h2></td>
 
         <td style="border-bottom: 1px solid #c2c2c2; padding:10px;"><h2  style="font-family: 'Roboto Condensed', sans-serif; font-size: 17px; font-weight: bold; text-transform: uppercase;"><?php echo $_order->formatPrice($_item->getRowTotal()) ?></h2></td>
 
